add footer contact info

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
       </section>
     </div>
     <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+      <footer class="footer">
+        <a href="mailto:kathylemssf@gmail.com"><i class="svg-icon email"></i></a>
+        <a href="https://www.facebook.com/kathylems"><i class="svg-icon facebook"></i></a>
+        <a href="https://github.com/kathy-ems"><i class="svg-icon github"></i></a>
+        <a href="https://www.linkedin.com/in/kathyems"><i class="svg-icon linkedin"></i></a>
+        <a href="https://www.twitter.com/kathyems"><i class="svg-icon twitter"></i></a>
+    </footer>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
