--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
           <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact Me</h3>
 
           <div class="svg-contact">
-            <a href="https://kathy-ems.github.com"><img class="alignnone size-full wp-image-239" src="https://kathyems.files.wordpress.com/2013/01/5kfhxlp.png" alt="github octocat" width="45" /></a> <a href="https://www.linkedin.com/in/kathyems"><img class="alignnone size-full wp-image-284" src="https://kathyems.files.wordpress.com/2013/01/svg-linkedin.png" alt="svg-linkedin" width="50" /></a> <a href="https://plus.google.com/u/0/+KathyEms/posts"><img class="alignnone size-full wp-image-282" src="https://kathyems.files.wordpress.com/2013/01/svg-googleplus.png" alt="svg-googleplus" width="50" /></a> <a href="https://www.facebook.com/kathylems"><img class="alignnone size-full wp-image-280" src="https://kathyems.files.wordpress.com/2013/01/svg-facebook.png" alt="svg-facebook" width="50" /></a> <a href="https://www.twitter.com/kathyems"><img class="alignnone size-full wp-image-283" src="https://kathyems.files.wordpress.com/2013/01/svg-twitter.png" alt="svg-twitter" width="50" /></a>
+            <a href="https://kathy-ems.github.com">
+              <img src="https://kathyems.files.wordpress.com/2013/01/5kfhxlp.png" alt="github octocat" width="45" />
+            </a>
+            <a href="https://www.linkedin.com/in/kathyems">
+              <img src="https://kathyems.files.wordpress.com/2013/01/svg-linkedin.png" alt="svg-linkedin" width="50" />
+            </a>
+            <a href="https://plus.google.com/u/0/+KathyEms/posts">
+              <img  src="https://kathyems.files.wordpress.com/2013/01/svg-googleplus.png" alt="svg-googleplus" width="50" />
+            </a>
+            <a href="https://www.facebook.com/kathyems">
+              <img  src="https://kathyems.files.wordpress.com/2013/01/svg-facebook.png" alt="svg-facebook" width="50" />
+            </a>
+            <a href="https://www.twitter.com/kathyems">
+              <img src="https://kathyems.files.wordpress.com/2013/01/svg-twitter.png" alt="svg-twitter" width="50" />
+            </a>
           </div>
       </section>
     </div>
