fix github contact info

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact Me</h3>
 
           <div class="svg-contact">
-            <a href="https://kathy-ems.github.com">
-              <img src="https://kathyems.files.wordpress.com/2013/01/5kfhxlp.png" alt="github octocat" width="45" />
+            <a href="https://www.github.com/kathy-ems">
+              <img src="https://kathyems.files.wordpress.com/2013/01/svg-github-tail.png" alt="svg-github-tail" width="45" />
             </a>
             <a href="https://www.linkedin.com/in/kathyems">
               <img src="https://kathyems.files.wordpress.com/2013/01/svg-linkedin.png" alt="svg-linkedin" width="50" />
