--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <a href="https://www.github.com/kathy-ems">
               <img src="https://kathyems.files.wordpress.com/2013/01/svg-github-tail.png" alt="svg-github-tail" width="45" />
             </a>
+            <a href="https://kathyems.wordpress.com">
+              <img src="https://kathyems.files.wordpress.com/2013/01/svg-wordpress.png" alt="svg-wordpress" width="46" padding="3px"/>
+            </a>
             <a href="https://www.linkedin.com/in/kathyems">
               <img src="https://kathyems.files.wordpress.com/2013/01/svg-linkedin.png" alt="svg-linkedin" width="50" />
             </a>
