--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
         </ul>
       </header>
       <section>
-        <h3>
-          <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kathy's Blog</h3>
-
-          <p><a href="https://kathyems.wordpress.com/">Visit my blog</a></p>
-
           <h3>
-          <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact Me</h3>
+            <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+            Contact Me
+          </h3>
 
           <div class="svg-contact">
             <a href="https://www.github.com/kathy-ems">
