change contact to my content around the web

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section>
           <h3>
             <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-            Contact Me
+            My content around the internet
           </h3>
 
           <div class="svg-contact">
