added designed by

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
               <img src="https://kathyems.files.wordpress.com/2013/01/svg-twitter.png" alt="svg-twitter" width="50" />
             </a>
           </div>
+          <div class="design-by">
+            <a href="http://www.freepik.com”>Icons designed by Patrickss / Freepik</a>
+          </div>
       </section>
     </div>
     <footer>
