--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </a>
           </div>
           <div class="design-by">
-            <a href="http://www.freepik.com”>Icons designed by Patrickss / Freepik</a>
+            <a href="http://www.freepik.com">Icons designed by Patrickss / Freepik</a>
           </div>
       </section>
     </div>
