moved designed by

--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
               <img src="https://kathyems.files.wordpress.com/2013/01/svg-twitter.png" alt="svg-twitter" width="50" />
             </a>
           </div>
-          <div class="design-by">
-            <a href="http://www.freepik.com">Icons designed by Patrickss / Freepik</a>
-          </div>
       </section>
     </div>
     <footer>
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+      <p><a href="http://www.freepik.com">Icons designed by Patrickss / Freepik</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
