change icon to badge

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <footer>
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-      <p><a href="http://www.freepik.com">Icons designed by Patrickss / Freepik</a></p>
+      <p><a href="http://www.freepik.com">Badge design by Patrickss / Freepik</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
