update badge icons

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
 
           <div class="svg-contact">
             <a href="https://www.github.com/kathy-ems">
-              <img src="https://kathyems.files.wordpress.com/2013/01/svg-github-tail.png" alt="svg-github-tail" width="45" />
+              <img src="https://kathyems.files.wordpress.com/2013/01/svg-github-tail_t.gif" alt="svg-github-tail" width="45" />
             </a>
             <a href="https://kathyems.wordpress.com">
-              <img src="https://kathyems.files.wordpress.com/2013/01/svg-wordpress.png" alt="svg-wordpress" width="46" padding="3px"/>
+              <img src="https://kathyems.files.wordpress.com/2013/01/svg-wordpress_t.gif" alt="svg-wordpress" width="46" padding="3px"/>
             </a>
             <a href="https://www.linkedin.com/in/kathyems">
-              <img src="https://kathyems.files.wordpress.com/2013/01/svg-linkedin.png" alt="svg-linkedin" width="50" />
+              <img src="https://kathyems.files.wordpress.com/2013/01/svg-linkedin_t.gif" alt="svg-linkedin" width="50" />
             </a>
             <a href="https://plus.google.com/u/0/+KathyEms/posts">
-              <img  src="https://kathyems.files.wordpress.com/2013/01/svg-googleplus.png" alt="svg-googleplus" width="50" />
+              <img  src="https://kathyems.files.wordpress.com/2013/01/svg-googleplus_t.gif" alt="svg-googleplus" width="50" />
             </a>
             <a href="https://www.facebook.com/kathyems">
-              <img  src="https://kathyems.files.wordpress.com/2013/01/svg-facebook.png" alt="svg-facebook" width="50" />
+              <img  src="https://kathyems.files.wordpress.com/2013/01/svg-facebook_t.gif" alt="svg-facebook" width="50" />
             </a>
             <a href="https://www.twitter.com/kathyems">
-              <img src="https://kathyems.files.wordpress.com/2013/01/svg-twitter.png" alt="svg-twitter" width="50" />
+              <img src="https://kathyems.files.wordpress.com/2013/01/svg-twitter_t.gif" alt="svg-twitter" width="50" />
             </a>
           </div>
       </section>
