update github badge icons

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <div class="svg-contact">
             <a href="https://www.github.com/kathy-ems">
-              <img src="https://kathyems.files.wordpress.com/2013/01/svg-github-tail_t.gif" alt="svg-github-tail" width="45" />
+              <img src="https://kathyems.files.wordpress.com/2013/01/svg-github-tail.png" alt="svg-github-tail" width="45" />
             </a>
             <a href="https://kathyems.wordpress.com">
               <img src="https://kathyems.files.wordpress.com/2013/01/svg-wordpress_t.gif" alt="svg-wordpress" width="46" padding="3px"/>
