--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           </h3>
 
           <div class="svg-contact">
-            <a href="https://www.github.com/kathy-ems">
+            <a class='github' href="https://www.github.com/kathy-ems">
               <img src="https://kathyems.files.wordpress.com/2013/01/svg-github-tail.png" alt="svg-github-tail" width="45" />
             </a>
-            <a href="https://kathyems.wordpress.com">
+            <a class='wordpress' href="https://kathyems.wordpress.com">
               <img src="https://kathyems.files.wordpress.com/2013/01/svg-wordpress_t.gif" alt="svg-wordpress" width="46" padding="3px"/>
             </a>
             <a href="https://www.linkedin.com/in/kathyems">
