--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>Kathy Ems</h1>
-        <p>Jill of all Trades</p>
+        <p>Software Developer</p>
         <p class="view"><a href="https://github.com/kathy-ems">View the Project on GitHub <small>kathy-ems</small></a></p>
         <ul>
           <li class="single"><a href="https://github.com/kathy-ems/kathy-ems.github.io">View On <strong>GitHub</strong></a></li>
